controller-gen: switch to use release binaries

--- a/controller-gen/BUILD.bazel
+++ b/controller-gen/BUILD.bazel
@@ -1,14 +1,6 @@
 load("@rules_kubebuilder//controller-gen:controller-gen-toolchain.bzl", "controller_gen_toolchain")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
-exports_files(
-    [
-        "bin/controller-gen.linux",
-        "bin/controller-gen.darwin",
-    ],
-    visibility = ["//visibility:public"],
-)
-
 filegroup(
     name = "srcs",
     srcs = glob([
@@ -19,12 +11,6 @@ filegroup(
 )
 
 pkg_tar(
-    name = "release-bin",
-    srcs = glob(["bin/*"]),
-    package_dir = "/bin",
-)
-
-pkg_tar(
     name = "release",
     srcs = [
         "BUILD.bazel",
@@ -32,19 +18,18 @@ pkg_tar(
     ],
     package_dir = "controller-gen",
     visibility = ["//visibility:public"],
-    deps = [":release-bin"],
 )
 
 toolchain_type(name = "toolchain")
 
 controller_gen_toolchain(
     name = "controller_gen_linux",
-    controller_gen_bin = "@rules_kubebuilder//controller-gen:bin/controller-gen.linux",
+    controller_gen_bin = "@controller_gen_linux_amd64//file:downloaded",
 )
 
 controller_gen_toolchain(
     name = "controller_gen_darwin",
-    controller_gen_bin = "@rules_kubebuilder//controller-gen:bin/controller-gen.darwin",
+    controller_gen_bin = "@controller_gen_darwin_arm64//file:downloaded",
 )
 
 toolchain(
@@ -61,8 +46,8 @@ toolchain(
 toolchain(
     name = "controller_gen_darwin_toolchain",
     exec_compatible_with = [
-        "@platforms//os:osx",
-        "@platforms//cpu:x86_64",
+        "@platforms//os:macos",
+        "@platforms//cpu:arm64",
     ],
     toolchain = ":controller_gen_darwin",
     toolchain_type = ":toolchain",
